--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "plop": "^3.0.5",
     "prettier": "2.6.2",
     "typescript": "^4.6.3",
-    "webpack": "^5.72.0"
+    "webpack": "^5.72.0",
+    "jest-styled-components": "^7.0.8"
   }
 }
