--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-spinners": "^0.13.4",
+    "react-spinners": "^0.13.6",
     "styled-components": "^5.3.5",
     "styled-media-query": "^2.1.2"
   },
@@ -87,10 +87,10 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.4.0",
     "eslint-plugin-storybook": "^0.6.7",
+    "jest-styled-components": "^7.0.8",
     "plop": "^3.0.5",
     "prettier": "2.6.2",
     "typescript": "^4.6.3",
-    "webpack": "^5.72.0",
-    "jest-styled-components": "^7.0.8"
+    "webpack": "^5.72.0"
   }
 }
